<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/speech_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_speechset"
            android:textSize="24sp"
            android:textColor="#1296db"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/speech_activity_title"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="发音人"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />
                <RadioGroup
                    android:id="@+id/speechset_activity_radiogruop"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="9dp">
                    <!--参考https://blog.csdn.net/wx_lanyu/article/details/85372977-->
                    <RadioButton
                        android:id="@+id/speechset_activity_radiobutton0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_speechset_radiobutton1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/speechset_activity_radiobutton_background"
                        android:button="@null"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:maxEms="3"
                        android:checked="true"/>
                    <!--要给RadioButton加上id不然默认状态不会改变-->
                    <RadioButton
                        android:id="@+id/speechset_activity_radiobutton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_speechset_radiobutton2"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/speechset_activity_radiobutton_background"
                        android:button="@null"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:maxEms="3"
                        android:layout_marginTop="15dp"/>

                    <RadioButton
                        android:id="@+id/speechset_activity_radiobutton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_speechset_radiobutton3"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/speechset_activity_radiobutton_background"
                        android:button="@null"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:maxEms="3"
                        android:layout_marginTop="15dp"/>

                    <RadioButton
                        android:id="@+id/speechset_activity_radiobutton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_speechset_radiobutton4"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/speechset_activity_radiobutton_background"
                        android:button="@null"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:maxEms="3"
                        android:layout_marginTop="15dp"/>

                    <RadioButton
                        android:id="@+id/speechset_activity_radiobutton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_speechset_radiobutton5"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/speechset_activity_radiobutton_background"
                        android:button="@null"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:maxEms="3"
                        android:layout_marginTop="15dp"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/speechset_activity_volumetextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_speechset_volume"
                    android:textSize="20sp" />
                <SeekBar
                    android:id="@+id/speechset_activity_volumeseekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progressDrawable="@drawable/speechset_activity_seekbar_progressdrawable"
                    android:maxHeight="5dp"
                    android:max="9"
                    android:progress="5"
                    android:thumb="@drawable/speechset_activity_seekbarbutton" />
                <!--参考https://blog.csdn.net/w8320273/article/details/7852752-->
                <TextView
                    android:id="@+id/speechset_activity_speedtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_speechset_speed"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/speechset_activity_speedseekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progressDrawable="@drawable/speechset_activity_seekbar_progressdrawable"
                    android:maxHeight="5dp"
                    android:max="9"
                    android:progress="5"
                    android:thumb="@drawable/speechset_activity_seekbarbutton"/>

                <TextView
                    android:id="@+id/speechset_activity_pitchtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_speechset_pitch"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/speechset_activity_pitchseekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progressDrawable="@drawable/speechset_activity_seekbar_progressdrawable"
                    android:maxHeight="5dp"
                    android:max="9"
                    android:progress="5"
                    android:thumb="@drawable/speechset_activity_seekbarbutton"/>
                <ImageButton
                    android:id="@+id/speechset_activity_speakbutton"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="right"
                    android:src="@mipmap/speechset_activity_speakdefault"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:padding="2dp"
                    android:background="@drawable/speechset_activity_speakbutton_background"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>